Made some changes

--- a/Views/Home/CreateBurial.cshtml
+++ b/Views/Home/CreateBurial.cshtml
@@ -125,16 +125,11 @@
                                         <span class="text-danger pl-3" asp-validation-for="WestToHead"></span>
                                     </div>
 
-                                    <!--HairTaken item-->
+                                    <!--Humerus item-->
                                     <div class="col-sm-3">
-                                        <label asp-for="HairTaken" class="col-sm-6 col-form-label text-right" style="text-align: left !important;width: 100%!important;padding-left:0px!important;font-weight:normal!important">Hair Taken</label>
-                                        <select class="col-sm-6 form-control" style="height: 35px!important; font-size: 14px!important;" asp-for="HairTaken" type="text" required>
-                                            <option value="">--</option>
-                                            <option value="true">Y (Yes)</option>
-                                            <option value="false">N (No)</option>
-                                            @*<option value="P">P (Pending)</option>*@
-                                        </select>
-                                        <span class="text-danger pl-3" asp-validation-for="HairTaken"></span>
+                                        <label asp-for="Humerus" class="col-sm-6 col-form-label text-right" style="text-align: left !important;width: 100%!important;padding-left:0px!important;font-weight:normal!important">Humerus</label>
+                                        <input class="col-sm-6 form-control" style="height: 35px!important; font-size: 14px!important;" asp-for="Humerus" type="number" required />
+                                        <span class="text-danger pl-3" asp-validation-for="Humerus"></span>
                                     </div>
                                 </div>
 
@@ -732,29 +727,6 @@
                                                         <label asp-for="Osteophytosis" class="col-sm-6 col-form-label text-right" style="text-align: left !important;width: 100%!important;padding-left:0px!important;font-weight:normal!important">Osteophytosis</label>
                                                         <input class="col-sm-6 form-control" style="height: 35px!important; font-size: 14px!important;" asp-for="Osteophytosis" type="text" />
                                                         <span class="text-danger pl-3" asp-validation-for="Osteophytosis"></span>
-                                                    </div>
-                                                </div>
-
-                                                <div class="form-group row" style="margin-bottom: 10px!important;justify-content:center!important">
-                                                    <!--PubicSymphysis item-->
-                                                    <div class="col-sm-3">
-                                                        <label asp-for="PubicSymphysis" class="col-sm-6 col-form-label text-right" style="text-align: left !important;width: 100%!important;padding-left:0px!important;font-weight:normal!important">Pubic Symphysis</label>
-                                                        <input class="col-sm-6 form-control" style="height: 35px!important; font-size: 14px!important;" asp-for="PubicSymphysis" type="text" />
-                                                        <span class="text-danger pl-3" asp-validation-for="PubicSymphysis"></span>
-                                                    </div>
-
-                                                    <!--Humerus item-->
-                                                    <div class="col-sm-3">
-                                                        <label asp-for="Humerus" class="col-sm-6 col-form-label text-right" style="text-align: left !important;width: 100%!important;padding-left:0px!important;font-weight:normal!important">Humerus</label>
-                                                        <input class="col-sm-6 form-control" style="height: 35px!important; font-size: 14px!important;" asp-for="Humerus" type="text" />
-                                                        <span class="text-danger pl-3" asp-validation-for="Humerus"></span>
-                                                    </div>
-
-                                                    <!--FemurLength item-->
-                                                    <div class="col-sm-3">
-                                                        <label asp-for="FemurLength" class="col-sm-6 col-form-label text-right" style="text-align: left !important;width: 100%!important;padding-left:0px!important;font-weight:normal!important">Femur Length</label>
-                                                        <input class="col-sm-6 form-control" style="height: 35px!important; font-size: 14px!important;" asp-for="FemurLength" type="text" />
-                                                        <span class="text-danger pl-3" asp-validation-for="FemurLength"></span>
                                                     </div>
                                                 </div>
 
