--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -25,7 +25,7 @@
                 <!-- <a class="btn btn-cta btn-primary" href="#" data-bs-toggle="modal" data-bs-target="#signup">Burial Summary List & Records</a>-->
                 <a class="btn btn-cta btn-primary" asp-action="BurialList">Burial Summary List & Records</a>
                 <br class="d-sm-inline-block d-md-none">
-                <a href="" class="video-play-trigger" data-bs-toggle="modal" data-bs-target="#modal-video"><img class="play-icon" src="assets/images/play-icon.svg" alt="Egyption Monuments in 4k resolution">Egypts Great Momunments</a>
+                <a href="" class="video-play-trigger" data-bs-toggle="modal" data-bs-target="#modal-video"><img class="play-icon" src="assets/images/play-icon.svg" alt="Egyption Monuments in 4k resolution">Egypts Great Monuments</a>
             </div>
         </div><!--//container-->
     </section><!--//promo-section-->
