Updated photo gallery

--- a/Views/Home/PhotoGallery.cshtml
+++ b/Views/Home/PhotoGallery.cshtml
@@ -435,84 +435,84 @@
                                             </div>
 
                                             <!-- Img 1 -->
-                                            <div class="post-masonry col-md-3 col-sm-6">
+                                            <!--<div class="post-masonry col-md-3 col-sm-6">
                                                 <div class="post-thumb" style="margin-bottom:15px!important">
                                                     <img src="~/img/photo_gallery/s41.jpg" alt="" style="width:300px!important;height:300px!important">
                                                     <div class="title-over">
                                                         <h4><a style="color:white!important">Burial Image #41</a></h4>
                                                     </div>
                                                 </div>
-                                            </div>
+                                            </div>-->
 
                                             <!-- Img 1 -->
-                                            <div class="post-masonry col-md-3 col-sm-6">
+                                            <!--<div class="post-masonry col-md-3 col-sm-6">
                                                 <div class="post-thumb" style="margin-bottom:15px!important">
                                                     <img src="~/img/photo_gallery/s42.jpg" alt="" style="width:300px!important;height:300px!important">
                                                     <div class="title-over">
                                                         <h4><a style="color:white!important">Burial Image #42</a></h4>
                                                     </div>
                                                 </div>
-                                            </div>
+                                            </div>-->
 
                                             <!-- Img 1 -->
-                                            <div class="post-masonry col-md-3 col-sm-6">
+                                            <!--<div class="post-masonry col-md-3 col-sm-6">
                                                 <div class="post-thumb" style="margin-bottom:15px!important">
                                                     <img src="~/img/photo_gallery/s43.jpg" alt="" style="width:300px!important;height:300px!important">
                                                     <div class="title-over">
                                                         <h4><a style="color:white!important">Burial Image #43</a></h4>
                                                     </div>
                                                 </div>
-                                            </div>
+                                            </div>-->
 
                                             <!-- Img 1 -->
-                                            <div class="post-masonry col-md-3 col-sm-6">
+                                            <!--<div class="post-masonry col-md-3 col-sm-6">
                                                 <div class="post-thumb" style="margin-bottom:15px!important">
                                                     <img src="~/img/photo_gallery/s44.jpg" alt="" style="width:300px!important;height:300px!important">
                                                     <div class="title-over">
                                                         <h4><a style="color:white!important">Burial Image #44</a></h4>
                                                     </div>
                                                 </div>
-                                            </div>
+                                            </div>-->
 
                                             <!-- Img 1 -->
-                                            <div class="post-masonry col-md-3 col-sm-6">
+                                            <!--<div class="post-masonry col-md-3 col-sm-6">
                                                 <div class="post-thumb" style="margin-bottom:15px!important">
                                                     <img src="~/img/photo_gallery/s45.jpg" alt="" style="width:300px!important;height:300px!important">
                                                     <div class="title-over">
                                                         <h4><a style="color:white!important">Burial Image #45</a></h4>
                                                     </div>
                                                 </div>
-                                            </div>
+                                            </div>-->
 
                                             <!-- Img 1 -->
-                                            <div class="post-masonry col-md-3 col-sm-6">
+                                            <!--<div class="post-masonry col-md-3 col-sm-6">
                                                 <div class="post-thumb" style="margin-bottom:15px!important">
                                                     <img src="~/img/photo_gallery/s46.jpg" alt="" style="width:300px!important;height:300px!important">
                                                     <div class="title-over">
                                                         <h4><a style="color:white!important">Burial Image #46</a></h4>
                                                     </div>
                                                 </div>
-                                            </div>
+                                            </div>-->
 
                                             <!-- Img 1 -->
-                                            <div class="post-masonry col-md-3 col-sm-6">
+                                            <!--<div class="post-masonry col-md-3 col-sm-6">
                                                 <div class="post-thumb" style="margin-bottom:15px!important">
                                                     <img src="~/img/photo_gallery/s47.jpg" alt="" style="width:300px!important;height:300px!important">
                                                     <div class="title-over">
                                                         <h4><a style="color:white!important">Burial Image #47</a></h4>
                                                     </div>
                                                 </div>
-                                            </div>
+                                            </div>-->
 
                                             <!-- Img 1 -->
-                                            <div class="post-masonry col-md-3 col-sm-6">
+                                            <!--<div class="post-masonry col-md-3 col-sm-6">
                                                 <div class="post-thumb" style="margin-bottom:15px!important">
                                                     <img src="~/img/photo_gallery/s48.jpg" alt="" style="width:300px!important;height:300px!important">
                                                     <div class="title-over">
                                                         <h4><a style="color:white!important">Burial Image #48</a></h4>
                                                     </div>
                                                 </div>
-                                            </div>
+                                            </div>-->
                                         </div>
                                     </div>
                                 </div>
