--- a/Views/Home/PhotoGallery.cshtml
+++ b/Views/Home/PhotoGallery.cshtml
@@ -85,34 +85,34 @@
                                             </div>
 
                                             <!-- Img 1 -->
-                                            <div class="post-masonry col-md-3 col-sm-6">
+                                            <!--<div class="post-masonry col-md-3 col-sm-6">
                                                 <div class="post-thumb" style="margin-bottom:15px!important">
                                                     <img src="~/img/photo_gallery/s6.jpg" alt="" style="width:300px!important;height:300px!important">
                                                     <div class="title-over">
                                                         <h4><a style="color:white!important">Burial Image #6</a></h4>
                                                     </div>
                                                 </div>
-                                            </div>
+                                            </div>-->
 
                                             <!-- Img 1 -->
-                                            <div class="post-masonry col-md-3 col-sm-6">
+                                            <!--<div class="post-masonry col-md-3 col-sm-6">
                                                 <div class="post-thumb" style="margin-bottom:15px!important">
                                                     <img src="~/img/photo_gallery/s7.jpg" alt="" style="width:300px!important;height:300px!important">
                                                     <div class="title-over">
                                                         <h4><a style="color:white!important">Burial Image #7</a></h4>
                                                     </div>
                                                 </div>
-                                            </div>
+                                            </div>-->
 
                                             <!-- Img 1 -->
-                                            <div class="post-masonry col-md-3 col-sm-6">
+                                            <!--<div class="post-masonry col-md-3 col-sm-6">
                                                 <div class="post-thumb" style="margin-bottom:15px!important">
                                                     <img src="~/img/photo_gallery/s8.jpg" alt="" style="width:300px!important;height:300px!important">
                                                     <div class="title-over">
                                                         <h4><a style="color:white!important">Burial Image #8</a></h4>
                                                     </div>
                                                 </div>
-                                            </div>
+                                            </div>-->
 
                                             <!-- Img 1 -->
                                             <!--<div class="post-masonry col-md-3 col-sm-6">
