--- a/Views/Home/EditBurial.cshtml
+++ b/Views/Home/EditBurial.cshtml
@@ -24,7 +24,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-10 mx-auto shadow-lg m-5 rounded" style="border: 3px solid black; background-color: #E4D4C8;">
-                            <form asp-action="CreateBurial" class="p-3 pb-7 pt-3">
+                            <form asp-action="EditBurial" class="p-3 pb-7 pt-3">
                                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                                 <!--Row 0-->
                                 <div class="form-group row pt-3" style="margin-bottom: 10px!important;justify-content:center!important">
@@ -935,6 +935,13 @@
                                                         <input class="col-sm-6 form-control" style="height: 35px!important; font-size: 14px!important;" asp-for="ToothTaken" type="text" />
                                                         <span class="text-danger pl-3" asp-validation-for="ToothTaken"></span>
                                                     </div>
+                                                </div>
+
+                                                <!--Invisible item for passing value-->
+                                                <div class="col-sm-3" style="display: none">
+                                                    <label asp-for="BurialId" class="col-sm-6 col-form-label text-right" style="text-align: left !important;width: 100%!important;padding-left:0px!important;font-weight:normal!important">Burial ID</label>
+                                                    <input class="form-control" style="height: 35px!important; font-size: 14px!important;" asp-for="BurialId" type="number" />
+                                                    <span class="text-danger pl-3" asp-validation-for="BurialId"></span>
                                                 </div>
                                             </div>
                                         </div>
